# bridge-snmp

./: .gitignore  Makefile.am  README  configure.ac  index.html
dot1dBasePortTable/: Makefile.am  dot1dBasePortTable-README-FIRST.txt  dot1dBasePortTable-README-dot1dBasePortTable.txt  dot1dBasePortTable.c  dot1dBasePortTable.h  dot1dBasePortTable_data_access.c  dot1dBasePortTable_data_access.h  dot1dBasePortTable_data_get.c  dot1dBasePortTable_data_get.h  dot1dBasePortTable_data_set.c  dot1dBasePortTable_data_set.h  dot1dBasePortTable_enums.h  dot1dBasePortTable_oids.h
dot1dBasePortTable/defaults/: node-dot1dBasePortIfIndex.m2d  node-dot1dStaticReceivePort.m2d  node-dot1dStpPort.m2d  node-dot1dStpPortForwardTransitions.m2d  node-dot1dTpPortMaxInfo.m2d  table-dot1dBasePortTable.m2d  table-dot1dStaticTable.m2d  table-dot1dTpFdbTable.m2d  table-dot1dTpPortTable.m2d
dot1dStpExtPortTable/: Makefile.am  dot1dStpExtPortTable-README-FIRST.txt  dot1dStpExtPortTable-README-dot1dStpExtPortTable.txt  dot1dStpExtPortTable.c  dot1dStpExtPortTable.h  dot1dStpExtPortTable_data_access.c  dot1dStpExtPortTable_data_access.h  dot1dStpExtPortTable_data_get.c  dot1dStpExtPortTable_data_get.h  dot1dStpExtPortTable_data_set.c  dot1dStpExtPortTable_data_set.h  dot1dStpExtPortTable_enums.h  dot1dStpExtPortTable_oids.h
dot1dStpExtPortTable/defaults/: node-dot1dStpPortAdminEdgePort.m2d  node-dot1dStpPortAdminPathCost.m2d  node-dot1dStpPortAdminPointToPoint.m2d  node-dot1dStpPortOperEdgePort.m2d  node-dot1dStpPortOperPointToPoint.m2d  node-dot1dStpPortProtocolMigration.m2d  table-dot1dStpExtPortTable.m2d
dot1dStpPortTable/: Makefile.am  dot1dStpPortTable-README-FIRST.txt  dot1dStpPortTable-README-dot1dStpPortTable.txt  dot1dStpPortTable.c  dot1dStpPortTable.h  dot1dStpPortTable_data_access.c  dot1dStpPortTable_data_access.h  dot1dStpPortTable_data_get.c  dot1dStpPortTable_data_get.h  dot1dStpPortTable_data_set.c  dot1dStpPortTable_data_set.h  dot1dStpPortTable_enums.h  dot1dStpPortTable_oids.h
dot1dStpPortTable/defaults/: node-dot1dBasePort.m2d  node-dot1dStpPortEnable.m2d  node-dot1dStpPortPathCost.m2d  node-dot1dStpPortPathCost32.m2d  node-dot1dStpPortPriority.m2d  table-dot1dBasePortTable.m2d  table-dot1dStpPortTable.m2d
dot1dTpFdbTable/: Makefile.am  dot1dTpFdbTable-README-FIRST.txt  dot1dTpFdbTable-README-dot1dTpFdbTable.txt  dot1dTpFdbTable.c  dot1dTpFdbTable.h  dot1dTpFdbTable_data_access.c  dot1dTpFdbTable_data_access.h  dot1dTpFdbTable_data_get.c  dot1dTpFdbTable_data_get.h  dot1dTpFdbTable_data_set.c  dot1dTpFdbTable_data_set.h  dot1dTpFdbTable_enums.h  dot1dTpFdbTable_oids.h
dot1dTpFdbTable/defaults/: node-dot1dBasePortDelayExceededDiscards.m2d  node-dot1dBasePortMtuExceededDiscards.m2d  node-dot1dStpPortDesignatedBridge.m2d  node-dot1dStpPortState.m2d  node-dot1dTpFdbAddress.m2d  node-dot1dTpFdbStatus.m2d  node-dot1dTpPortInDiscards.m2d  node-dot1dTpPortInFrames.m2d  node-dot1dTpPortOutFrames.m2d  table-dot1dTpFdbTable.m2d
dot1dTpPortTable/: Makefile.am  dot1dTpPortTable-README-FIRST.txt  dot1dTpPortTable-README-dot1dTpPortTable.txt  dot1dTpPortTable.c  dot1dTpPortTable.h  dot1dTpPortTable_data_access.c  dot1dTpPortTable_data_access.h  dot1dTpPortTable_data_get.c  dot1dTpPortTable_data_get.h  dot1dTpPortTable_data_set.c  dot1dTpPortTable_data_set.h  dot1dTpPortTable_enums.h  dot1dTpPortTable_oids.h
dot1dTpPortTable/defaults/: node-dot1dBasePortCircuit.m2d  node-dot1dStaticAddress.m2d  node-dot1dStaticAllowedToGoTo.m2d  node-dot1dStaticStatus.m2d  node-dot1dStpPortDesignatedCost.m2d  node-dot1dStpPortDesignatedPort.m2d  node-dot1dStpPortDesignatedRoot.m2d  node-dot1dTpFdbPort.m2d  node-dot1dTpPort.m2d  table-dot1dStpPortTable.m2d  table-dot1dTpPortTable.m2d
include/: ctl_functions.h  dot1dBridge.h
mibs/: BRIDGE-MIB.txt  RSTP-MIB.txt
src/: Makefile.am  bridge-snmp.c  ctl_main.c  dot1dBridge.c
